Ajustes models e services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=pedidos
 
 # Config banco
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/pedidos
+spring.datasource.url=jdbc:postgresql://localhost:5433/pedidos
 spring.datasource.username=postgres
 spring.datasource.password=admin
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
